# redo

./: .gitignore  README.markdown  Setup.hs  note.org  redo.cabal  redo2.do  redo2.hs  rules.org  stack.yaml  todo.org
app/: Main.hs  Redo.hs  RelayRedo.hs
scripts/: default.do  default.exe.do  default.o.do
src/: Main.hs
src/Development/: Redo.hs
src/Development/Redo/: Config.hs  Future.hs  TokenSem.hs  TokenServer.hs  Util.hs
test/: clean.do  redo  redo-ifchange  test-sub1.do  test-sub2.do  test.do  test_dep_cycle.do
test/test0/: clean.do  test-sub1-1.do  test-sub1.do
test/test1/: clean.do  test-sub1-1.do  test-sub1.do  test.do
test/test2/: clean.do  test.do
test/test3/: redo-ifchange  redo-ifcreate  test.do
test/test4/: test-sub1-1.do
test/test5/: clean.do  default.a.do  default.b.do  default.c.do  test-sub1-1  test-sub1-1.do  test.do  test0
test/test6/: default.a.do  default.b.do  test-sub1.a.do  test.do
test/test7/: clean.do  default.a.do  default.b.do  test.do
test/test8/: clean.do  default.a.do  test.do
test/test9/: clean.do  test-sub1.do  test.do
