name:                redo
version:             0.3.0
synopsis:            A branch of jekor's redo
description:         See https://github.com/jekor/redo for details.
homepage:            https://github.com/comatose/redo
bug-reports:         https://github.com/comatose/redo/issues
license:             PublicDomain
license-file:        LICENSE
author:              Boncheol Gu
maintainer:          boncheol.gu@gmail.com
category:            Distribution
build-type:          Custom
cabal-version:       >=1.8
tested-with:         GHC == 7.6.2

source-repository    head
  type:              git
  location:          git://github.com/comatose/redo.git


library
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5,
                       directory,
                       filepath,
                       split
  exposed-modules:
                  Development.Redo.Util

executable redo
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       bytestring,
                       containers >= 0.5,
                       directory,
                       filepath,
                       process,
                       pureMD5,
                       split
  extensions:          ScopedTypeVariables,
                       DeriveDataTypeable
  ghc-options:         -Wall -fno-warn-missing-signatures
