name:                redo
version:             0.5.0
synopsis:            A branch of jekor's redo
description:         See https://github.com/comatose/redo for details.
homepage:            https://github.com/comatose/redo
bug-reports:         https://github.com/comatose/redo/issues
license:             BSD3
license-file:        LICENSE
author:              Boncheol Gu
maintainer:          boncheol.gu@gmail.com
category:            Distribution
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:
                       Development.Redo
                       Development.Redo.Config
                       Development.Redo.Future
                       Development.Redo.TokenSem
                       Development.Redo.TokenServer
                       Development.Redo.Util
  build-depends:       ansi-terminal,
                       base >= 4.7 && < 5,
                       bytestring,
                       directory,
                       filepath,
                       network,
                       pqueue,
                       process,
                       pureMD5,
                       transformers,
                       unix
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables,
                       DeriveDataTypeable
  ghc-options:         -Wall -O2

executable redo
  hs-source-dirs:      app
  main-is:             Redo.hs
  ghc-options:         -Wall -O2 -threaded
  build-depends:       base,
                       redo,
                       simple-get-opt
  default-language:    Haskell2010

executable relay-redo
  hs-source-dirs:      app
  main-is:             RelayRedo.hs
  ghc-options:         -Wall -O2
  build-depends:       base,
                       redo
  default-language:    Haskell2010

test-suite redo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ansi-terminal,
                       base,
                       bytestring,
                       containers >= 0.5,
                       directory,
                       filepath,
                       process,
                       pureMD5,
                       redo,
                       simple-get-opt,
                       unix
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository    head
  type:              git
  location:          git://github.com/comatose/redo.git
